--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.tvappcvtedatafromassets"
+        applicationId "com.example.BrowseFragmentUsingRetrofit"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -36,4 +36,6 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:4.11.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.google.android.material:material:1.8.0-alpha01"
+
 }
