--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 27 10:54:52 IST 2022
-sdk.dir=C\:\\Users\\sande\\AppData\\Local\\Android\\Sdk
+#Thu Nov 03 12:22:41 IST 2022
+sdk.dir=/home/sandeep/Android/Sdk
